dz4/css/hw4.css
body {
  background-color: #0c739f;
  background-image: url(../img/background.jpg);
  background-size: auto;
  background-repeat: repeat-x;
  }
.wraper {
  margin: 2% 11% 15px 11%;
  background-color: white;
}
p,div,a,li {
  font-family: arial, sans-serif;
}

/*-------------H E A D E R -----------------*/

header {
  position: relative;
  display:inline-block;
  width: 100%;
  background-color: white;
}

 /* C O N T A C T S */
.contacts {
   float: right;
   margin: 1% 3% 0px 0px;
   color: #128aa7;
   font-size: 12px;
   text-align: left;
   line-height: 22px;
}
.countries {
  width: 50%;
  margin-right: 3%;
  display: block;
  float: right;
  clear: right;
  font-size: 0px;
  text-align: right;
}
.countries p {
  display: inline-block;
  margin:3% 0% 1% 3%;
  width: auto;
  text-align: center;
}
.countries p a {
  width: auto;
  color: #128aa7;
  font-size: 10px;
}
.logo {
  position: relative;
  float: left;
  height: 100%;
  margin: 1% 0 -8px 3%;
}
.logo p {
  position: absolute;
  top:50%;
  left:24%;
  color: #128aa7;
  font-size: 12px;
  text-align: center;
  line-height: 24px;
}
.clearfix:after {
  content: "";
  clear: both;
  display: block;
}
.photo {
  clear: both;
  padding: 11% 0 11% 0;
  border-top: 1px solid #128aa7;
  border-bottom: 1px solid #128aa7;
  background-image: url(../img/photo.jpg);
  background-size: 100%;
}
.panel {
  position: relative;
  display: block;
  width: 100%;
  border-top: 1px solid grey;
  background-image: url(../img/panel.png);
  background-size: cover;
  -webkit-box-shadow: 2px 3px 25px 0px rgba(0,0,0,1);
  -moz-box-shadow: 2px 3px 25px 0px rgba(0,0,0,1);
  box-shadow: 2px 3px 25px 0px rgba(0,0,0,1);
}
.submenu {
  display: none;
  position: absolute;
  top: 98%;
  right: auto;
  left: auto;
  bottom: auto;
  width: 130px;
  padding: 5px;
  background-color: #303030;
  line-height: 24px;
  -webkit-box-shadow: 2px 3px 25px 0px rgba(0,0,0,0.91);
  -moz-box-shadow: 2px 3px 25px 0px rgba(0,0,0,0.91);
  box-shadow: 2px 3px 25px 0px rgba(0,0,0,0.91);
}
.panel > li:hover > ul.submenu {
    display: block;
}
.panel li {
  display: inline-block;
  width: auto;
}
.panel li a {
  display: block;
  text-indent: 50px;
  width: 100%;
  color: white;
  font-size: 14px;
  line-height: 32px;
  text-decoration: none;
}
.tri {
  display: inline;
  font-size: 8px;
  
}

/*------------C O N T A I N E R ------------*/

.conteiner {
  width: inherit;
  overflow: hidden;
}
.inf {
  float: left;
  width: 210px;
  height: 100%;
  background-image: url(../img/left_bground.png);
  background-size: 100%;
  border-right: 1px solid #c7cacf;
  margin-bottom: -20000px;
  padding-bottom: 20000px;
}
.inf_p {
  border-bottom: 1px solid #c7cacf;
  padding: 0 15px 0 15px;
  line-height: 24px;
  font-size: 14px;
  color: #424c43;
}
.news {
  float: right;
  width: 210px;
  height: 100%;
  background-image: url(../img/left_bground.png);
  background-size: 100%;
  border-left: 1px solid #c7cacf;
  margin-bottom: -20000px;
  padding-bottom: 20000px;
}
.news_p {
  border-bottom: 1px solid #c7cacf;
  padding: 0 15px 0 15px;
  line-height: 24px;
  font-size: 14px;
  color: #424c43;
}
.h1 {
  font-size: 18px;
  line-height: 24px;
  padding: 5px 15px 5px 15px;
  text-align: center;
  color: #424c43;
}
.content {
  margin-left: 210px;
  margin-right: 210px;
  padding: 15px;
  width: auto;
}
footer {
  clear: both;
  padding-bottom: 15px;
  margin: 0 auto;
  text-align: center;
  font-size: 12px;
  color: white;
}

